--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p> This is the beginning of my munro graph project :)</p>
+<h1>Munro Graph Project</h1>
+<p>This is the beginning of my munro graph project :)</p>
 </body>
 </html>
