--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head<>
+  <link rel="stylesheet" href="styles.css">
+</head<>
 <body>
 <h1>Munro Graph Project</h1>
 <p>This is the beginning of my munro graph project :)</p>
