--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head<>
-  <link rel="stylesheet" href="styles.css">
-</head<>
-<body>
-<h1>Munro Graph Project</h1>
-<p>This is the beginning of my munro graph project :)</p>
-
-<p>Help</p>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="light dark" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.red.min.css" />
+    <title>Munro Map</title>
+  </head>
+  <body>
+	<main class = "container">
+	  <h1>Munro Graph Project</h1>
+      <p>This is the beginning of my munro graph project :)</p>
+      
+	  <button>Button</button>
+	</main>
+  </body>
 </html>
