--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <body>
 	<main class = "container">
 	  <h1>Munro Graph Project</h1>
+	  
       <p>This is the beginning of my munro graph project :)</p>
-      
+      <h2>Munros Per Month</h2>
+	  <img src ="/images/munros_per_month">
+	  <h2>Munros per Year</h2>
+	  <img src ="/images/munros_per_year">
 	  <button>Button</button>
 	</main>
   </body>
