--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	  
       <p>This is the beginning of my munro graph project :)</p>
       <h2>Munros Per Month</h2>
-	  <img src ="/images/munros_per_month">
+	  <img src ="/images/munros_per_month.png">
 	  <h2>Munros per Year</h2>
-	  <img src ="/images/munros_per_year">
+	  <img src ="/images/munros_per_year.png">
 	  <button>Button</button>
 	</main>
   </body>
