--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<main class = "container">
 	  <h1>Munro Graph Project</h1>
 	  
-      <p>This is the beginning of my munro graph project :)</p>
+	  <h2<>Munros completion date</h2<>
+	  <img src ="/images/munros_date_against_height.png">
       <h2>Munros Per Month</h2>
 	  <img src ="/images/munros_per_month.png">
 	  <h2>Munros per Year</h2>
 	  <img src ="/images/munros_per_year.png">
-	  <button>Button</button>
+	  
 	</main>
   </body>
 </html>
