--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<main class = "container">
 	  <h1>Munro Graph Project</h1>
 	  
-	  <h2<>Munros completion date</h2<>
+	  <h2>Munros Completion Date</h2>
 	  <img src ="/images/munros_date_against_height.png">
       <h2>Munros Per Month</h2>
 	  <img src ="/images/munros_per_month.png">
