--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
 	<main class = "container">
 	  <h1>Munro Graph Project</h1>
-	  
+	  <h2>Munros with Colour </h2>
+	  <img src ="/images/munros_with_colour.png">
 	  <h2>Munros Completion Date</h2>
 	  <img src ="/images/munros_date_against_height.png">
       <h2>Munros Per Month</h2>
