Adding test link to new page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
 	<main class = "container">
+	<a href=test.html>Test link</a>
 	  <h1>Munro Graph Project</h1>
 	  <h2>Munros with Colour </h2>
 	  <img src ="/images/munros_with_colour.png">
