--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 	  <img src ="/images/munros_per_year.png">
 	  
 	</main>
-  <iframe src="munro_info.html" style="border:2px solid red;" title="Iframe Example"></iframe>
+  <iframe src="munro_info.html" style="border:2px solid red;width:100%; height: 500px; overflow: auto" title="Iframe Example"></iframe>
   </body>
 </html>
