--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 	<main class = "container">
 	  <h1>Munro Graph Project</h1>
 	  <h2>Munros with Colour </h2>
+	 <a href="munro_info.html">Current Munro progress!</a> 
 	  <img src ="/images/munros_with_colour.png">
 	  <h2>Munros Completion Date</h2>
 	  <img src ="/images/munros_date_against_height.png">
-      <h2>Munros Per Month</h2>
+          <h2>Munros Per Month</h2>
 	  <img src ="/images/munros_per_month.png">
 	  <h2>Munros per Year</h2>
 	  <img src ="/images/munros_per_year.png">
 	  
 	</main>
-  <iframe src="munro_info.html" style="border:2px solid red;width:100%; height: 500px; overflow: auto" title="Iframe Example"></iframe>
+  
   </body>
 </html>
